@@ -2,6 +2,7 @@ package com.dougnoel.sentinel.configurations;
 
 import static org.junit.Assert.*;
 
+import com.dougnoel.sentinel.strings.SentinelStringUtils;
 import org.junit.After;
 import org.junit.AfterClass;
 import org.junit.BeforeClass;
@@ -12,8 +13,18 @@ import com.dougnoel.sentinel.pages.PageManager;
 import com.dougnoel.sentinel.system.TestManager;
 import com.dougnoel.sentinel.webdrivers.Driver;
 
+import java.io.IOException;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.time.Duration;
+
 public class ConfigurationTests {
+	private static final Path CONFIG_FILE_PATH = Path.of("conf/sentinel.yml");
+	private static final String TIMEOUT = "timeout";
+	private static final String LONG_PROCESS_TIMEOUT = "longProcessTimeout";
 	private static String originalEnvironment = null;
+	private static Duration orignalTimeout = Time.out();;
+	private static Duration orignalLongProcessTimeout = Time.longProcessTimeout();
 	private static final String ENV = "env";
 	private static final String PROD = "prod";
 	private static final String STAGE = "stage";
@@ -43,9 +54,15 @@ public class ConfigurationTests {
 	}
 
 	@AfterClass
-	public static void tearDownAfterAllTestsAreFinished() throws Exception {
+	public static void tearDownAfterAllTestsAreFinished() throws IOException {
 		Configuration.update(ENV, originalEnvironment);
 		Driver.quitAllDrivers();
+		Files.deleteIfExists(CONFIG_FILE_PATH);
+		Time.reset();
+		System.setProperty(TIMEOUT, Long.toString(orignalTimeout.getSeconds()));
+		Configuration.update(TIMEOUT, orignalTimeout.getSeconds());
+		System.setProperty(LONG_PROCESS_TIMEOUT, Long.toString(orignalLongProcessTimeout.getSeconds()));
+		Configuration.update(LONG_PROCESS_TIMEOUT, orignalLongProcessTimeout.getSeconds());
 	}
 
 	@Test
@@ -77,7 +94,8 @@ public class ConfigurationTests {
 	public void failToLoadNonExistentPassword() {
 		Configuration.accountInformation(DOESNOTEXIST, PASSWORD);
 	}
-	
+
+	@Test
 	public void getEnvironmentDefault() {
 		Configuration.clear(ENV);
 		assertEquals("Expecting the default env to be set if none is given.", "localhost", Configuration.environment());
@@ -201,5 +219,47 @@ public class ConfigurationTests {
 	@Test(expected = FileException.class)
 	public void failToLoadNonExistentExecutable() {
 		Configuration.executable("TextboxPage");
+	}
+
+	@Test
+	public void clearConfiguration(){
+		Configuration.update(TEST_VALUE, "true");
+		Configuration.clearAllSessionAppProps();
+		assertFalse("Expecting test value to default to false due to being cleared out.", Configuration.toBoolean(TEST_VALUE));
+	}
+
+	@Test
+	public void clearConfigurationDoesNotWipeTimeout(){
+		System.setProperty(TIMEOUT, "3");
+		Time.reset();
+		Configuration.clearAllSessionAppProps();
+		assertEquals("Expecting timeout to still be 3 after all config values cleared.", 3, Time.out().toSeconds());
+	}
+
+	@Test
+	public void clearConfigurationDoesNotWipeEnvironment(){
+		Configuration.clear(ENV);
+		System.setProperty(ENV, TEST_VALUE);
+		Configuration.clearAllSessionAppProps();
+		assertEquals(SentinelStringUtils.format("Expecting {} to still be {} after all config values cleared.", ENV, TEST_VALUE), TEST_VALUE, Configuration.environment());
+		Configuration.clear(ENV);
+		System.clearProperty(ENV);
+	}
+
+	@Test
+	public void clearConfigurationDoesNotWipeDataFromConfigFile() throws IOException {
+		// - if this test fails for you, it might be because the java version you are using is unable to read the config file (java versions past jdk11).
+		//   try adding --add-opens=java.base/java.io=ALL-UNNAMED to your java VM options.
+
+		// - test_value will keep its value from before all config values cleared due to /conf/sentinel.yml file containing 'test_value: 1234' for default env.
+		Files.writeString(CONFIG_FILE_PATH,
+				"---\n" +
+						"configurations:\n" +
+						"  default:\n" +
+						"    test_value: 1234\n" +
+						"...");
+		Configuration.clearAllSessionAppProps();
+		assertEquals(SentinelStringUtils.format("Expecting {} to still be set after all config values cleared.", TEST_VALUE),
+				"1234", Configuration.toString(TEST_VALUE));
 	}
 }
